syntax = "proto3";

option java_package = "com.javatecharc.demo.protobuf.grpc";
option java_multiple_files = true;

service EmployeeService {
    rpc GetEmployeeDetails (EmployeeRequest) returns (EmployeeResponse);
}

message EmployeeRequest {
    int32 empId = 1;
}

message EmployeeResponse {
    int32 empId = 1;
    string name = 2;
    string department = 3;
    string email = 4;
    int64 salary = 5;
}
